<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/btnPannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/startBtn"
            style="@style/basicBtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/start"
            android:textSize="16dp" />


        <Button
            android:id="@+id/saveBtn"
            style="@style/basicBtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="16dp" />

        <Button
            android:id="@+id/reset"
            style="@style/basicBtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/Reset"
            android:textSize="16dp" />

    </LinearLayout>


    <letsrock.areaviewlib.AreaView
        android:id="@+id/measureView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/recordCoOrdinates"
        android:layout_below="@+id/btnPannel"
        android:layout_marginTop="20dp"
        android:keepScreenOn="true" />

    <LinearLayout
        android:id="@+id/recordCoOrdinates"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/recordBtn"
                style="@style/basicBtnStyle"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/Record"
                android:textSize="16dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/latitude"
                    style="@style/textbasic_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:text="" />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/bdRLplotdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvtitleplotdetails"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/tvtitleplotid"
            android:fontFamily="@font/rubik_regular"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/GPS_Points" />


            <TextView
                android:id="@+id/tvplotarea"
                android:fontFamily="@font/rubik_regular"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tvplotlandmark"
                android:layout_weight="1"
                android:text="@string/Distance" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gpsRecords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:divider="@color/gray"
            android:dividerHeight="1px" />

    </LinearLayout>
</RelativeLayout>
