<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/white_bg"
    >
    <TextView
        android:id="@+id/cancel"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_gravity="end"
        android:background="@drawable/cancel"
        android:gravity="right"
        android:paddingTop="@dimen/margin_10"
        android:layout_alignParentRight="true"
        android:textColor="@color/green"
        android:textSize="12dp" />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stateTxt"
            style="@style/header_h1_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/id_proofs" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="10dp"
            android:background="@drawable/spinner_bgg"
            android:elevation="2dp"

            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:weightSum="1"
                android:orientation="horizontal"

                tools:ignore="UselessParent">
                <Spinner
                    android:id="@+id/idProofsSpin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:background="@null"
                    android:layout_weight="0.9"
                    android:minHeight="0dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:padding="8dp"
                    android:src="@drawable/arrow_down" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_9sdp"
                android:layout_marginTop="-5dp"
                android:background="@color/white"
                android:fontFamily="@font/hind_regular"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingRight="@dimen/_3sdp"
                android:text="@string/id_proofss"
                android:textColor="@color/black2" />
        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Id_number"
        android:layout_marginLeft="@dimen/margin_5"
        android:layout_marginRight="@dimen/margin_5"
        android:paddingLeft="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"


        >


        <EditText
            android:id="@+id/idproofsEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_regular"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:text=""
            android:maxLength="50"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
       >

        <ImageView
            android:id="@+id/idproofsImageV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:elevation="4dp"
            android:src="@drawable/easy_farm_logo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="end"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/CancelBtn"
            style="@style/Common_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="@dimen/margin_20"
            android:textColor="@color/black2"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/SaveBtn"
            style="@style/basicBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30dp"
            android:layout_margin="10dp"
            android:text="@string/upload" />


    </LinearLayout>

</LinearLayout>
</RelativeLayout>