<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gpsPointsLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cis.easyfarm.ui.PreViewAreaCalScreen"
    tools:showIn="@layout/activity_pre_view_area_cal_screen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_regular"
                android:layout_weight="1"
              android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/plot_area_as_per_gps" />

            <TextView

                android:id="@+id/gps_text"
                style="@style/header_h1_text_title_multi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_regular"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/gps_boundaries_of_the_plot" />

            <Button
                android:id="@+id/start_gps_btn"
                style="@style/basicBtnStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:layout_weight="1"
                android:text="@string/start">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
               android:textStyle="bold"
                    android:fontFamily="@font/rubik_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/Geo_Points_Lat_long" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title_multi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title_multi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="P1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title_multi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:fontFamily="@font/rubik_regular"
                            android:text="P2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title_multi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="P3" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title_multi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="P4" />

                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

            <include layout="@layout/activity_gps_points" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/land_save_btn"
                style="@style/basicBtnStyle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/save" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
